# prony_c

./: CMakeLists.txt  README.md  aux_print.c  aux_print.h  config.h  main.c  tclague.c  tclague.h  types.h
